@@ -4,6 +4,8 @@ Mod(1, 3)
 -27*d^2*a^2 + (18*d*c*b - 4*c^3)*a + (-4*d*b^3 + c^2*b^2)
 Mod(2, 3)*c^3*a + (Mod(2, 3)*d*b^3 + Mod(1, 3)*c^2*b^2)
 Mod(2, 3)*c^3*a
+-4/x
+0
 0:1
 0:1
 0:1
@@ -38,4 +40,7 @@ Mod(Mod(0, 1267650600228229401496703205653), Mod(1, 126765060022822940149670
 2788345856, [2, 66; 3, 6; 13, 20; 131, 2; 233, 4; 547, 2; 4441, 4; 60527, 4;
  163561, 2; 647113, 4; 314542445630843, 2]]
 2*a + 1
-Total time spent: 87
+  ***   at top-level: poldisc(x^2/y^2,y)
+  ***                 ^------------------
+  *** poldisc: incorrect type in polresultant (t_RFRAC).
+Total time spent: 104
