@@ -423,4 +423,5 @@ Mod(1, 3)*z^3*y^3
 2
 4
 y^2
-Total time spent: 5371
+(x^3 + 1)/x^3
+Total time spent: 5562
