@@ -5,6 +5,8 @@ poldisc((a*x^3+b*x^2+c*x+d))
 poldisc((a*x^3+b*x^2+c*x+d)*Mod(1,3))
 poldisc((a*x^3+c*x+d)*Mod(1,3))
 
+poldisc(y^2/x+1, y)
+poldisc(x, y)
 
 check(P)=
 {
@@ -39,3 +41,6 @@ T=y^24+4*y^23-14*y^22-72*y^21+79*y^20+596*y^19-26*y^18-2440*y^17-913*y^16+6004*y
 poldiscfactors(T)
 
 a=ffgen(3^2,'a);poldisc(x^6+a*x+y)
+
+\\ ERRORS, keep at end of file
+poldisc(x^2/y^2, y)
